--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Backend de YumYum</title>
+    <title>Backend de Aula Link</title>
 </head>
 <body>
     <h1>Bienvenido al backend</h1>
